force-app/main/default/objects/Contact/fields/NOK_Postcode__c.field-meta.xml
<CustomField>
    <fullName>NOK_Postcode__c</fullName>
    <label>Emergency Contact Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>