force-app/main/default/objects/Contact/fields/NTE_Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>NTE_Booking_Reference__c</fullName>
    <label>Latest NTE Booking Reference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>