force-app/main/default/objects/Contact/fields/NTE_Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>NTE_Contact_Role__c</fullName>
    <label>NTE Contact Role</label>
    <length>100</length>
    <type>Text</type>
</CustomField>