force-app/main/default/objects/Contact/fields/NTE_Participant__c.field-meta.xml
<CustomField>
    <fullName>NTE_Participant__c</fullName>
    <description>Identifies a person created or updated from a converted NTE application.</description>
    <defaultValue>false</defaultValue>
    <label>NTE Contact</label>
    <type>Checkbox</type>
</CustomField>