force-app/main/default/objects/Contact/fields/NTE_Source_Form_Type__c.field-meta.xml
<CustomField>
    <fullName>NTE_Source_Form_Type__c</fullName>
    <label>Latest NTE Source Form</label>
    <length>100</length>
    <type>Text</type>
</CustomField>