force-app/main/default/objects/Contact/fields/Volunteer_Code_Consent__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Code_Consent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Code of Conduct Acknowledged</label>
    <type>Checkbox</type>
</CustomField>