force-app/main/default/objects/Contact/fields/Volunteer_Code_Version__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Code_Version__c</fullName>
    <label>Code of Conduct Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>