force-app/main/default/objects/Contact/fields/Volunteer_Consent__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Consent__c</fullName>
    <label>Volunteer Consent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>