force-app/main/default/objects/Contact/fields/Volunteer_Declaration_Date__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Declaration_Date__c</fullName>
    <label>Volunteer Declaration Date</label>
    <type>Date</type>
</CustomField>