force-app/main/default/objects/Contact/fields/Volunteer_Declaration_Name__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Declaration_Name__c</fullName>
    <description>Captured by the NTE27 exhibitor Web-to-Lead form.</description>
    <label>Volunteer Declaration Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>