force-app/main/default/objects/Contact/listViews/NTE_Contacts.listView-meta.xml
<ListView>
    <fullName>NTE_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>NTE_Event_Code__c</columns>
    <columns>NTE_Source_Form_Type__c</columns>
    <columns>NTE_Booking_Reference__c</columns>
    <columns>NTE_Last_Application_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NTE_Participant__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>NTE Contacts</label>
</ListView>